fixed dark mode inputs

--- a/components/util/filter/filter.module.css
+++ b/components/util/filter/filter.module.css
@@ -10,6 +10,7 @@
     display: flex;
     align-content: center;
     align-items: center;
+    color: #707070;
 }
 
 .filterOptionInput {
