--- a/pages/createCategory/createCategory.module.css
+++ b/pages/createCategory/createCategory.module.css
@@ -160,7 +160,7 @@
     /*margin-right: 1em;*/
     margin-top: .8em;
     margin-bottom: .3em;
-    padding-right: .5em;
+    padding-right: 1em;
 }
 .categoryFields td{
     margin: 0;
